--- a/roles/junossnmp/tasks/main.yml
+++ b/roles/junossnmp/tasks/main.yml
@@ -6,5 +6,5 @@
       - set snmp community public authorization read-only
       - set snmp community public clients 192.168.1.0/24
       - set snmp community public clients 192.168.1.0/24 restrict
-    host: "{{ inventory_hostname }}"
-    transport: netconf
+ #   host: "{{ inventory_hostname }}"
+ #   transport: netconf
